--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 doc.setFont('helvetica', 'normal');
                 doc.setTextColor(55, 65, 81); // Gray-700
                 const today = new Date(2025, 7, 17); // August 17, 2025
-                today.setHours(14, 37, 0, 0); // Set to 02:37 PM IST
+                today.setHours(14, 43, 0, 0); // Set to 02:43 PM IST
                 const year = today.getFullYear();
                 const randomSuffix = Math.floor(Math.random() * 900) + 100;
                 const amcNumber = `ETS-AMC-${year}${randomSuffix.toString().padStart(3, '0')}`;
@@ -302,7 +302,7 @@
                 let currentY = startY + 10;
                 terms.forEach((term, index) => {
                     const lines = doc.splitTextToSize(term, 170);
-                    if (currentY + lines.length * 5 > 240) { // Adjusted for signature at bottom
+                    if (currentY + lines.length * 5 > 250) { // Adjusted to fit signature at 260mm
                         doc.addPage();
                         currentY = 50;
                         doc.setFont('helvetica', 'bold');
@@ -327,12 +327,12 @@
                     currentY += lines.length * 5;
                 });
 
-                // Redesigned Signature Section at Bottom
-                currentY = 250; // Fixed bottom position
+                // Redesigned Signature Section with Proper Alignment
+                currentY = 260; // Positioned above footer at 285mm
                 doc.setFontSize(12);
                 doc.setFont('helvetica', 'bold');
                 doc.text('Authorized Signatures', 105, currentY, { align: 'center' });
-                currentY += 10;
+                currentY += 5;
                 doc.setFont('helvetica', 'normal');
                 doc.text('Customer', 50, currentY);
                 doc.text('Service Provider', 140, currentY);
@@ -345,13 +345,13 @@
                 doc.setTextColor(0, 0, 0); // Dark black
                 doc.text(`${contactPerson || '_______________________'}`, 50, currentY, { align: 'center' });
                 doc.text('Authorized Signatory', 140, currentY, { align: 'center' });
-                currentY += 10;
+                currentY += 5;
                 doc.text(`${customerName || '_______________________'}`, 50, currentY, { align: 'center' });
                 doc.text('Eye Tech Securities', 140, currentY, { align: 'center' });
-                currentY += 10;
+                currentY += 5;
                 const dateStr = today.toLocaleDateString('en-GB', { day: '2-digit', month: '2-digit', year: 'numeric' }).split('/').join('/');
-                doc.text(dateStr, 50, currentY, { align: 'center' });
-                doc.text(dateStr, 140, currentY, { align: 'center' });
+                doc.text('Date: ' + dateStr, 50, currentY, { align: 'center' });
+                doc.text('Date: ' + dateStr, 140, currentY, { align: 'center' });
 
                 // Footer (no page number on last page)
                 const totalPages = doc.internal.getNumberOfPages();
