--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
     <div class="container">
         <div class="form-section">
             <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">AMC Agreement Generator</h1>
+            
+            <!-- Added navigation links between AMC and Service Report -->
+            <div class="flex justify-center gap-4 mb-6">
+                <a href="amc-agreement-generator.html" class="btn-primary text-center">AMC Agreement</a>
+                <a href="service-report-generator.html" class="btn-secondary text-center">Service Report</a>
+            </div>
+            
             <form id="amc-form">
                 <div class="form-section">
                     <h2>Customer Details</h2>
