--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             
             <!-- Added navigation links between AMC and Service Report -->
             <div class="flex justify-center gap-4 mb-6">
-                <a href="amc-agreement-generator.html" class="btn-primary text-center">AMC Agreement</a>
+                <a href="index.html" class="btn-primary text-center">AMC Agreement</a>
                 <a href="service-report-generator.html" class="btn-secondary text-center">Service Report</a>
             </div>
             
