--- a/check.html
+++ b/check.html
@@ -455,7 +455,18 @@
                     doc.setFontSize(11);
                     doc.setFont('helvetica', 'normal');
                     doc.text('Customer', leftSignatureX, signatureBoxY, { align: 'center' });
-                    doc.text('Service Provider', rightSignatureX, signatureBoxY, { align: 'center' });
+                    const imgWidth = 40;
+                    const imgHeight = 20;
+                    const imgX = rightSignatureX - (imgWidth / 2);
+                    const imgY = signatureBoxY - 25; // Position above the signature line
+                    
+                    if (signatureImageData) {
+                        try {
+                            doc.addImage(signatureImageData, 'JPEG', imgX, imgY, imgWidth, imgHeight);
+                        } catch (error) {
+                            console.warn('Could not add signature image:', error);
+                        }
+                    }
 
                     const lineY = signatureBoxY + 15;
                     doc.setDrawColor(0, 0, 0);
@@ -467,7 +478,7 @@
                     doc.setFontSize(10);
                     doc.setTextColor(0, 0, 0);
                     doc.text(contactPerson || 'Name: ___________________', leftSignatureX, nameY, { align: 'center' });
-                    doc.text('Authorized Signatory', rightSignatureX, nameY, { align: 'center' });
+                    doc.text('Authorised Signatory', rightSignatureX, nameY, { align: 'center' });
 
                     const companyY = nameY + 5;
                     doc.text(customerName || 'Company: ________________', leftSignatureX, companyY, { align: 'center' });
@@ -477,20 +488,6 @@
                     const dateStr = today.toLocaleDateString('en-GB', { day: '2-digit', month: '2-digit', year: 'numeric' });
                     doc.text(`Date: ${dateStr}`, leftSignatureX, dateY, { align: 'center' });
                     doc.text(`Date: ${dateStr}`, rightSignatureX, dateY, { align: 'center' });
-
-                    if (signatureImageData) {
-                        try {
-                            // Add the signature image above the service provider signature line
-                            const imgWidth = 40;
-                            const imgHeight = 20;
-                            const imgX = rightSignatureX - (imgWidth / 2);
-                            const imgY = signatureBoxY + 20;
-                            
-                            doc.addImage(signatureImageData, 'JPEG', imgX, imgY, imgWidth, imgHeight);
-                        } catch (error) {
-                            console.warn('Could not add signature image:', error);
-                        }
-                    }
 
                     // Footer
                     const totalPages = doc.internal.getNumberOfPages();
