--- a/index.html
+++ b/index.html
@@ -170,6 +170,17 @@
                     <div id="total-amount">Total Amount: Rs.0</div>
                 </div>
 
+                <!-- Added signature upload section -->
+                <div class="form-section mt-6">
+                    <h2>Signature</h2>
+                    <label for="signature-upload" class="block text-sm font-medium text-gray-700">Upload Signature Image (Optional)</label>
+                    <input type="file" id="signature-upload" accept="image/*" class="input-field" onchange="handleSignatureUpload(event)">
+                    <div id="signature-preview" class="mt-2" style="display: none;">
+                        <img id="signature-image" src="/placeholder.svg" alt="Signature Preview" style="max-width: 200px; max-height: 100px; border: 1px solid #d1d5db; border-radius: 4px;">
+                        <button type="button" onclick="removeSignature()" class="btn-secondary ml-2">Remove</button>
+                    </div>
+                </div>
+
                 <button type="button" onclick="generatePDF()" class="btn-primary mt-6 w-full">Generate PDF</button>
                 <div id="error-message"></div>
             </form>
@@ -177,6 +188,27 @@
     </div>
 
     <script>
+        let signatureImageData = null;
+
+        function handleSignatureUpload(event) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    signatureImageData = e.target.result;
+                    document.getElementById('signature-image').src = signatureImageData;
+                    document.getElementById('signature-preview').style.display = 'block';
+                };
+                reader.readAsDataURL(file);
+            }
+        }
+
+        function removeSignature() {
+            signatureImageData = null;
+            document.getElementById('signature-upload').value = '';
+            document.getElementById('signature-preview').style.display = 'none';
+        }
+
         function addParticularRow() {
             const container = document.getElementById('particulars-container');
             const row = document.createElement('div');
@@ -418,14 +450,27 @@
 
                     const leftSignatureX = 55;
                     const rightSignatureX = 135;
-                    const signatureBoxY = signatureStartY + 15;
+                    const signatureBoxY = signatureStartY + 35;
 
                     doc.setFontSize(11);
                     doc.setFont('helvetica', 'normal');
                     doc.text('Customer', leftSignatureX, signatureBoxY, { align: 'center' });
                     doc.text('Service Provider', rightSignatureX, signatureBoxY, { align: 'center' });
 
-                    const lineY = signatureBoxY + 15;
+                    const imgWidth = 40;
+                    const imgHeight = 20;
+                    const imgX = rightSignatureX - (imgWidth / 2);
+                    const imgY = signatureBoxY + 5; // Position below "Service Provider" text but above signature line
+                    
+                    if (signatureImageData) {
+                        try {
+                            doc.addImage(signatureImageData, 'JPEG', imgX, imgY, imgWidth, imgHeight);
+                        } catch (error) {
+                            console.warn('Could not add signature image:', error);
+                        }
+                    }
+
+                    const lineY = signatureBoxY + 30;
                     doc.setDrawColor(0, 0, 0);
                     doc.setLineWidth(0.3);
                     doc.line(leftSignatureX - 25, lineY, leftSignatureX + 25, lineY);
@@ -435,7 +480,7 @@
                     doc.setFontSize(10);
                     doc.setTextColor(0, 0, 0);
                     doc.text(contactPerson || 'Name: ___________________', leftSignatureX, nameY, { align: 'center' });
-                    doc.text('Authorized Signatory', rightSignatureX, nameY, { align: 'center' });
+                    doc.text('Authorised Signatory', rightSignatureX, nameY, { align: 'center' });
 
                     const companyY = nameY + 5;
                     doc.text(customerName || 'Company: ________________', leftSignatureX, companyY, { align: 'center' });
