--- a/service-report-generator.html
+++ b/service-report-generator.html
@@ -12,27 +12,27 @@
             font-family: 'Helvetica', Arial, sans-serif;
             max-width: 1000px;
             margin: 0 auto;
-            padding: 20px;
+            padding: 15px;
             background-color: #f5f7fa;
         }
         h1 {
             text-align: center;
             color: #1a3c6d;
-            font-size: 24px;
-            margin-bottom: 20px;
+            font-size: 22px;
+            margin-bottom: 15px;
         }
         .tabs {
             display: flex;
             justify-content: center;
-            gap: 10px;
-            margin-bottom: 20px;
+            gap: 8px;
+            margin-bottom: 15px;
         }
         .tabs a {
-            padding: 12px 25px;
+            padding: 10px 20px;
             text-decoration: none;
             color: #fff;
             background-color: #1a3c6d;
-            border-radius: 6px;
+            border-radius: 5px;
             font-weight: bold;
             transition: background-color 0.3s;
         }
@@ -41,24 +41,24 @@
         }
         .form-section {
             background-color: #fff;
-            padding: 20px;
-            margin-bottom: 15px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 15px;
+            margin-bottom: 12px;
+            border-radius: 6px;
+            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
         }
         .form-section h2 {
             color: #1a3c6d;
-            font-size: 16px;
-            margin-bottom: 12px;
-            border-bottom: 2px solid #1a3c6d;
-            padding-bottom: 4px;
+            font-size: 14px;
+            margin-bottom: 10px;
+            border-bottom: 1px solid #1a3c6d;
+            padding-bottom: 3px;
         }
         .form-group {
-            margin-bottom: 12px;
+            margin-bottom: 10px;
         }
         .form-group label {
             display: block;
-            margin-bottom: 4px;
+            margin-bottom: 3px;
             font-weight: 600;
             color: #333;
         }
@@ -66,34 +66,34 @@
         .form-group select,
         .form-group textarea {
             width: 100%;
-            padding: 8px;
+            padding: 6px;
             border: 1px solid #d0d4db;
-            border-radius: 4px;
-            font-size: 13px;
+            border-radius: 3px;
+            font-size: 12px;
         }
         .checklist {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 10px;
+            gap: 8px;
         }
         .checklist label {
             display: flex;
             align-items: center;
-            font-size: 13px;
+            font-size: 12px;
         }
         .checklist input[type="checkbox"] {
-            margin-right: 6px;
+            margin-right: 5px;
         }
         .generate-btn {
             display: block;
             width: 100%;
-            padding: 12px;
+            padding: 10px;
             background-color: #e74c3c;
             color: #fff;
             border: none;
-            border-radius: 6px;
+            border-radius: 5px;
             cursor: pointer;
-            font-size: 15px;
+            font-size: 14px;
             font-weight: bold;
             transition: background-color 0.3s;
         }
@@ -262,33 +262,32 @@
 
             // Company Header
             doc.setFillColor(26, 60, 109); // Dark Blue
-            doc.rect(0, 0, 210, 30, 'F');
+            doc.rect(0, 0, 210, 25, 'F');
             doc.setFont('Helvetica', 'bold');
-            doc.setFontSize(16);
+            doc.setFontSize(14);
             doc.setTextColor(255, 255, 255);
             doc.text('Eye Tech Securities', 10, 15);
-            doc.setFontSize(9);
+            doc.setFontSize(8);
             doc.setFont('Helvetica', 'normal');
-            doc.text('No.36/80, Medavakkam Main Road, Keelkattalai', 10, 20);
-            doc.text('Chennai, Tamil Nadu 600113', 10, 24);
-            doc.text('Phone: +91916218229 | Email: eyetecsecurities@gmail.com', 10, 28);
+            doc.text('No.36/80, Medavakkam Main Road, Keelkattalai, Chennai, Tamil Nadu 600113', 10, 20);
+            doc.text('Phone: +91916218229 | Email: eyetecsecurities@gmail.com', 10, 24);
 
             // Title
-            doc.setFontSize(14);
+            doc.setFontSize(12);
             doc.setTextColor(0, 0, 0);
             doc.setFont('Helvetica', 'bold');
-            doc.text('Service Report', 105, 40, null, null, 'center');
+            doc.text('Service Report', 105, 35, null, null, 'center');
 
             // Customer Details Table
-            doc.setFontSize(10);
+            doc.setFontSize(9);
             doc.setFont('Helvetica', 'bold');
-            doc.text('Customer Details', 10, 50);
+            doc.text('Customer Details', 10, 45);
             doc.setDrawColor(26, 60, 109);
-            doc.setLineWidth(0.3);
-            doc.line(10, 52, 200, 52);
+            doc.setLineWidth(0.2);
+            doc.line(10, 47, 200, 47);
 
             doc.autoTable({
-                startY: 55,
+                startY: 50,
                 head: [['Field', 'Details']],
                 body: [
                     ['Customer Name', document.getElementById('customer-name').value || 'N/A'],
@@ -301,26 +300,27 @@
                 headStyles: {
                     fillColor: [26, 60, 109],
                     textColor: [255, 255, 255],
-                    fontSize: 8,
+                    fontSize: 7,
                     fontStyle: 'bold'
                 },
                 bodyStyles: {
-                    fontSize: 8,
+                    fontSize: 6,
                     textColor: [0, 0, 0]
                 },
                 margin: { left: 10, right: 10 },
-                tableWidth: 180
+                tableWidth: 180,
+                rowPageBreak: 'avoid'
             });
 
-            let y = doc.lastAutoTable.finalY + 5;
+            let y = doc.lastAutoTable.finalY + 3;
 
             // Service Details Table
-            doc.setFontSize(10);
+            doc.setFontSize(9);
             doc.setFont('Helvetica', 'bold');
             doc.text('Service Details', 10, y);
             doc.line(10, y + 2, 200, y + 2);
             doc.autoTable({
-                startY: y + 5,
+                startY: y + 3,
                 head: [['Field', 'Details']],
                 body: [
                     ['Service Type', document.getElementById('service-type').value || 'N/A'],
@@ -332,18 +332,19 @@
                 headStyles: {
                     fillColor: [26, 60, 109],
                     textColor: [255, 255, 255],
-                    fontSize: 8,
+                    fontSize: 7,
                     fontStyle: 'bold'
                 },
                 bodyStyles: {
-                    fontSize: 8,
+                    fontSize: 6,
                     textColor: [0, 0, 0]
                 },
                 margin: { left: 10, right: 10 },
-                tableWidth: 180
+                tableWidth: 180,
+                rowPageBreak: 'avoid'
             });
 
-            y = doc.lastAutoTable.finalY + 5;
+            y = doc.lastAutoTable.finalY + 3;
 
             // Checklist
             const equipmentType = document.getElementById('equipment-type').value;
@@ -389,65 +390,69 @@
             }
 
             if (checklistItems.length > 0) {
-                doc.setFontSize(10);
+                doc.setFontSize(9);
                 doc.setFont('Helvetica', 'bold');
                 doc.text(`${equipmentType} Checklist`, 10, y);
                 doc.line(10, y + 2, 200, y + 2);
                 doc.autoTable({
-                    startY: y + 5,
+                    startY: y + 3,
                     head: [['Item', 'Status']],
                     body: checklistItems,
                     theme: 'grid',
                     headStyles: {
                         fillColor: [26, 60, 109],
                         textColor: [255, 255, 255],
-                        fontSize: 8,
+                        fontSize: 6,
                         fontStyle: 'bold'
                     },
                     bodyStyles: {
-                        fontSize: 7,
+                        fontSize: 5,
                         textColor: [0, 0, 0]
                     },
                     margin: { left: 10, right: 10 },
-                    tableWidth: 180
+                    tableWidth: 180,
+                    rowPageBreak: 'avoid'
                 });
-                y = doc.lastAutoTable.finalY + 5;
+                y = doc.lastAutoTable.finalY + 3;
             }
 
             // Issue Description
             const issueDescription = document.getElementById('issue-description').value;
             if (issueDescription) {
-                doc.setFontSize(10);
+                doc.setFontSize(9);
                 doc.setFont('Helvetica', 'bold');
                 doc.text('Issue Description', 10, y);
                 doc.line(10, y + 2, 200, y + 2);
                 doc.setFont('Helvetica', 'normal');
-                doc.setFontSize(8);
-                doc.text(doc.splitTextToSize(issueDescription, 190), 10, y + 5);
-                y += 5 + 5 * Math.ceil(issueDescription.length / 95);
+                doc.setFontSize(6);
+                const textLines = doc.splitTextToSize(issueDescription, 180);
+                doc.text(textLines, 10, y + 4, { maxWidth: 180 });
+                y += 4 + 4 * Math.min(textLines.length, 3); // Limit to 3 lines to fit page
             }
 
             // Technician Comments
             const technicianComments = document.getElementById('technician-comments').value;
             if (technicianComments) {
-                doc.setFontSize(10);
+                doc.setFontSize(9);
                 doc.setFont('Helvetica', 'bold');
                 doc.text('Technician Comments', 10, y);
                 doc.line(10, y + 2, 200, y + 2);
                 doc.setFont('Helvetica', 'normal');
-                doc.setFontSize(8);
-                doc.text(doc.splitTextToSize(technicianComments, 190), 10, y + 5);
-                y += 5 + 5 * Math.ceil(technicianComments.length / 95);
+                doc.setFontSize(6);
+                const textLines = doc.splitTextToSize(technicianComments, 180);
+                doc.text(textLines, 10, y + 4, { maxWidth: 180 });
+                y += 4 + 4 * Math.min(textLines.length, 3); // Limit to 3 lines to fit page
             }
 
-            // Footer
+            // Footer (adjusted to avoid overlap)
+            const footerY = Math.min(y + 10, 260); // Ensure footer starts before page end
             doc.setFillColor(26, 60, 109);
-            doc.rect(0, 270, 210, 27, 'F');
-            doc.setFontSize(8);
+            doc.rect(0, footerY, 210, 27, 'F');
+            doc.setFontSize(7);
             doc.setTextColor(255, 255, 255);
             doc.setFont('Helvetica', 'normal');
-            doc.text('Eye Tech Securities | No.36/80, Medavakkam Main Road, Keelkattalai, Chennai, Tamil Nadu 600113', 10, 280);
-            doc.text('Phone: +91916218229 | Email: eyetecsecurities@gmail.com | www.eyetecsecurities.in', 10, 287);
+            doc.text('Eye Tech Securities | No.36/80, Medavakkam Main Road, Keelkattalai, Chennai, Tamil Nadu 600113', 10, footerY + 5);
+            doc.text('Phone: +91916218229 | Email: eyetecsecurities@gmail.com | www.eyetecsecurities.in', 10, footerY + 10);
 
             // Save the PDF
             doc.save('Service_Report.pdf');
